crates/strider/tests/snapshots/v2__arm_thumb__calls__fib_recursive.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x548:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "5" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x548:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "12" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v15" [color="#888888", style=dashed];
  "v15" -> "12" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v16" [color="#888888", style=dashed];
  "v16" -> "12" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "17" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "17" -> "18" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "21" -> "18" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "22" -> "18" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "23" -> "18" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "23" [label="φ d1", shape=house, fillcolor="#163030"];
  "17" -> "23" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v25" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v25" [color="#888888", style=dashed];
  "v25" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="φ d0", shape=house, fillcolor="#163030"];
  "17" -> "22" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "26" -> "22" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v27" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v27" [color="#888888", style=dashed];
  "v27" -> "22" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="φ r1", shape=house, fillcolor="#163030"];
  "17" -> "21" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "9" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v28" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v28" [color="#888888", style=dashed];
  "v28" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="φ r0", shape=house, fillcolor="#163030"];
  "17" -> "20" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "29" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v31" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v31" [color="#888888", style=dashed];
  "v31" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v16" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="φ Mem", shape=house, fillcolor="#163030"];
  "17" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "6" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "32" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "36" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "37" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "42" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "45" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "29" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "45" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "49" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "50" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
